src/app/components/article-cards/article-cards.component.scss
@import "colors";

.articles-container {
  display: flex;
  flex-wrap: wrap;
  gap: 45px;
  margin-top: 40px;

  .article-card {
    width: 400px;
    max-height: 600px;
    border-radius: 5px;
    border: 1px solid $flesh-white;
    background: $white;
    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.05);
  }

  .article-card-image {
    flex-shrink: 0;
    object-fit: cover;
  }

  .article-card-content {
    padding: 25px;

    .mat-icon {
      $size: 16px;
      fill: $dark-grey;
      font-size: $size;
      width: $size;
      height: $size;
    }

    .article-card-date-label {
      display: flex;
      align-items: center;
      gap: 8px;
      margin-bottom: 24px;
      opacity: 0.6000000238418579;

      .date-label {
        color: $dark-grey;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
      }
    }

    .article-card-title {
      color: $dark-grey;
      width: 350px;
      font-size: 24px;
      font-style: normal;
      font-weight: 400;
      line-height: normal;
      margin-bottom: 20px;
    }

    .card-description {
      color: $dark-grey;
      width: 350px;
      font-size: 16px;
      font-style: normal;
      font-weight: 400;
      line-height: 150%;
      margin-bottom: 20px;
    }
  }

  .article-card-actions {
    padding: 0;

    .article-card-button {
      display: flex;
      flex-direction: row-reverse;
      align-items: center;
      color: $dark-grey;
      font-size: 16px;
      font-style: normal;
      font-weight: 700;
      line-height: 150%;
    }
  }
}

